# hackathon-prep

./: .env.postgres.example  .gitignore  README.md  docker-compose.postgres.yml  hackathon.db  main.py  pipeline_example.py  pyproject.toml  test_claude.py
.streamlit/: config.toml
api/: chat_wrapper.py  comparables_seed.json  main.py  statutes_seed.json
data/: california_vehicle_injury_statutes.csv  eval-ca-vehicle-code.csv
data/parsed/ca_leginfo_pages/: parse_manifest.jsonl
data/parsed/co_public_law/: parse_manifest.jsonl
data/parsed/findlaw_pages/: parse_manifest_findlaw.jsonl
demo/: app.py
extract/: llm.py  schemas.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: styles.css
ingest/: README.md  _http.py  cli.py  courtlistener.py  manifest.py  parse_pdf.py  scrape.py
ingest/parsers/: __init__.py  ca_leginfo.py  caci.py  caci_lookup.py  consolidate_jsonl.py  findlaw.py  public_law.py  run_ca_leginfo.py  run_findlaw.py  run_public_law.py  runner.py  types.py
ingest/sources/: __init__.py  base.py  ca_leginfo_pages.py  ca_leginfo_toc.py  caci_pdfs.py  co_public_law.py  findlaw_sections.py  fl_public_law.py  nv_public_law.py  ny_public_law.py  or_public_law.py  tx_public_law.py
new_api/: Dockerfile  README.md  docker-compose.yml  requirements.txt
new_api/app/: db.py  main.py
new_api/scripts/: ingest_veh_statutes.py  tag_statute_factors.py
new_api/sql/: schema.sql
scripts/: ingest_comparables.py  ingest_verdicts.py  load_released_set.py  tag_statutes.py
search/: semantic.py
store/: db.py  postgres.py  schema_postgres.sql
(+10831 files in other folders)
