[project]
name = "hackathon-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.100.0",
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.2",
    "fastapi>=0.115.0",
    "fastembed>=0.7.3",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pdfplumber>=0.11.9",
    "playwright>=1.59.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.13.4",
    "pypdf>=6.10.2",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "selectolax>=0.4.8",
    "sentence-transformers>=5.4.1",
    "sqlite-utils>=3.39",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.32.0",
]
